--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -8,6 +8,7 @@
         class="form-control" 
         name="title"
         #title
+        [(ngModel)]="currentPost.title"
       >
     </div>
 
@@ -18,10 +19,16 @@
         class="form-control" 
         name="body"
         #body
+        [(ngModel)]="currentPost.body"
       >
     </div>
-    <button class="btn btn-dark btn-block" (click)="addPost(title.value, body.value)">
+    <input type="hidden" name="id" [(ngModel)]="currentPost.id">
+    <button *ngIf="!isEdit" class="btn btn-dark btn-block" (click)="addPost(title.value, body.value)">
       Add Post
     </button>
+
+    <button *ngIf="isEdit" class="btn btn-warning btn-block" (click)="updatePost()">
+        Edit Post
+      </button>
   </form>
 </div>
