added routing that works

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <h1>Welcome</h1>
 <p>This is a Angular sandbox application</p>
-<button class="btn btn-secondary">User Section</button>
-<button class="btn btn-secondary">Posts Section</button>
+<button class="btn btn-secondary" routerLink="/users">User Section</button>
+<button class="btn btn-secondary" routerLink="/posts">Posts Section</button>
